<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content">

    <TextView
        android:id="@+id/infoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Information"
        android:textSize="25dp"
        android:textColor="@color/red"/>
    <TextView
        android:id="@+id/T1"
        android:layout_below="@+id/infoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ticandtac_group"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/T2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AP"
        android:layout_below="@+id/T1"
        android:layout_margin="10dp"
        android:textSize="15dp"/>
    <TextView
        android:id="@+id/T3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T2"
        android:layout_margin="10dp"
        android:text="@string/AM"
        android:textSize="15dp"/>


</RelativeLayout>